Pedagogy form only visible to upper secondary school students. Some style fixes

--- a/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/react-select-override.scss
+++ b/muikku-core-plugins/src/main/resources/META-INF/resources/scripts/src/sass/elements/react-select-override.scss
@@ -124,3 +124,9 @@
     }
   }
 }
+
+.react-select-override--pedagogy-form {
+  .react-select-override__control {
+    max-width: unset;
+  }
+}
